--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/styled": "^11",
     "framer-motion": "^6",
     "next": "12.0.10",
+    "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.4.4",
+    "next-translate": "^1.3.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
